--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"lodash": "^4.17.21",
 		"react": "^19.0.0-rc.1",
 		"react-dom": "^19.0.0-rc.1",
-		"react-leaflet": "^5.0.0-rc.2"
+		"react-leaflet": "^5.0.0-rc.2",
+		"react-router-dom": "^7.12.0"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.14.0",
