--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
 		}
 	],
 	"compilerOptions": {
+		"target": "ES2015",
+		"lib": ["ES2015", "DOM"],
 		"types": [
 			"./worker-configuration.d.ts"
 		]
